Projects page translated

--- a/public/assets/locales/en/translations.json
+++ b/public/assets/locales/en/translations.json
@@ -26,6 +26,12 @@
   "add-filters": "Add Filters",
   "search": "Search",
 
+  "all": "All",
+  "production-all": "Production All",
+  "parameters": "Parameters",
+  "simulations": "Simulations",
+  "reporting": "Reporting",
+
   "projects": {
     "title": "Projects"
   },
